exports[`Configuration and directives - nodes should be light blue > No config - use default #0`] = `
<svg
  id="mermaid-1650652034700"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  role="img"
  aria-labelledby="chart-title-mermaid-1650652034700 chart-desc-mermaid-1650652034700"
  height="192"
  style="max-width: 297.36456298828125px;"
  viewBox="0 0 297.36456298828125 192"
>
  <title id="chart-title-mermaid-1650652034700">Flow chart</title>
  <desc id="chart-desc-mermaid-1650652034700"></desc>
  <style>
    #mermaid-1650652034700 {
      font-family: courier;
      font-size: 16px;
      fill: #333;
    }
    #mermaid-1650652034700 .error-icon {
      fill: #552222;
    }
    #mermaid-1650652034700 .error-text {
      fill: #552222;
      stroke: #552222;
    }
    #mermaid-1650652034700 .edge-thickness-normal {
      stroke-width: 2px;
    }
    #mermaid-1650652034700 .edge-thickness-thick {
      stroke-width: 3.5px;
    }
    #mermaid-1650652034700 .edge-pattern-solid {
      stroke-dasharray: 0;
    }
    #mermaid-1650652034700 .edge-pattern-dashed {
      stroke-dasharray: 3;
    }
    #mermaid-1650652034700 .edge-pattern-dotted {
      stroke-dasharray: 2;
    }
    #mermaid-1650652034700 .marker {
      fill: #333333;
      stroke: #333333;
    }
    #mermaid-1650652034700 .marker.cross {
      stroke: #333333;
    }
    #mermaid-1650652034700 svg {
      font-family: courier;
      font-size: 16px;
    }
    #mermaid-1650652034700 .label {
      font-family: courier;
      color: #333;
    }
    #mermaid-1650652034700 .cluster-label text {
      fill: #333;
    }
    #mermaid-1650652034700 .cluster-label span {
      color: #333;
    }
    #mermaid-1650652034700 .label text,
    #mermaid-1650652034700 span {
      fill: #333;
      color: #333;
    }
    #mermaid-1650652034700 .node rect,
    #mermaid-1650652034700 .node circle,
    #mermaid-1650652034700 .node ellipse,
    #mermaid-1650652034700 .node polygon,
    #mermaid-1650652034700 .node path {
      fill: #ececff;
      stroke: #9370db;
      stroke-width: 1px;
    }
    #mermaid-1650652034700 .node .label {
      text-align: center;
    }
    #mermaid-1650652034700 .node.clickable {
      cursor: pointer;
    }
    #mermaid-1650652034700 .arrowheadPath {
      fill: #333333;
    }
    #mermaid-1650652034700 .edgePath .path {
      stroke: #333333;
      stroke-width: 2px;
    }
    #mermaid-1650652034700 .flowchart-link {
      stroke: #333333;
      fill: none;
    }
    #mermaid-1650652034700 .edgeLabel {
      background-color: #e8e8e8;
      text-align: center;
    }
    #mermaid-1650652034700 .edgeLabel rect {
      opacity: 0.5;
      background-color: #e8e8e8;
      fill: #e8e8e8;
    }
    #mermaid-1650652034700 .cluster rect {
      fill: #ffffde;
      stroke: #aaaa33;
      stroke-width: 1px;
    }
    #mermaid-1650652034700 .cluster text {
      fill: #333;
    }
    #mermaid-1650652034700 .cluster span {
      color: #333;
    }
    #mermaid-1650652034700 div.mermaidTooltip {
      position: absolute;
      text-align: center;
      max-width: 200px;
      padding: 2px;
      font-family: courier;
      font-size: 12px;
      background: hsl(80, 100%, 96.2745098039%);
      border: 1px solid #aaaa33;
      border-radius: 2px;
      pointer-events: none;
      z-index: 100;
    }
    #mermaid-1650652034700 :root {
      --mermaid-font-family: courier;
    }
  </style>
  <g>
    <g class="output">
      <g class="clusters">
        <g
          class="cluster"
          id="flowchart-section-12"
          transform="translate(148.68228912353516,140)"
          style="opacity: 1;"
        >
          <rect
            width="281.3645782470703"
            height="88"
            x="-140.68228912353516"
            y="-44"
          ></rect>
          <g
            class="label"
            transform="translate(0, -30)"
            id="mermaid-1650652034700Text"
          >
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  section
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
      <g class="edgePaths">
        <g class="edgePath LS-A LE-B" id="L-A-B" style="opacity: 1;">
          <path
            class="path"
            d="M136.40168944272128,46L130.21408105619025,50.166666666666664C124.02647266965924,54.333333333333336,111.65125589659719,62.666666666666664,105.46364751006617,71C99.27603912353516,79.33333333333333,99.27603912353516,87.66666666666667,99.35937245686848,96.08333333333333C99.44270579020183,104.5,99.60937245686848,113,99.69270579020183,117.25L99.77603912353516,121.5"
            marker-end="url(#arrowhead22)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead22"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
        <g class="edgePath LS-A LE-C" id="L-A-C" style="opacity: 1;">
          <path
            class="path"
            d="M192.8326779278842,46L199.02028631441522,50.166666666666664C205.20789470094624,54.333333333333336,217.5831114740083,62.666666666666664,223.7707198605393,71C229.9583282470703,79.33333333333333,229.9583282470703,87.66666666666667,229.9583282470703,96C229.9583282470703,104.33333333333333,229.9583282470703,112.66666666666667,229.9583282470703,116.83333333333333L229.9583282470703,121"
            marker-end="url(#arrowhead23)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead23"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-B" class="edgeLabel L-LS-A' L-LE-B"></span></div
            ></foreignObject>
          </g>
        </g>
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-C" class="edgeLabel L-LS-A' L-LE-C"></span></div
            ></foreignObject>
          </g>
        </g>
      </g>
      <g class="nodes">
        <g
          class="node default"
          id="flowchart-B-7"
          transform="translate(99.27603912353516,140)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-C-9"
          transform="translate(229.9583282470703,140)"
          style="opacity: 1;"
        >
          <rect
            rx="0"
            ry="0"
            x="-24.40625"
            y="-19"
            width="48.8125"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-14.40625,-9)">
              <foreignObject width="28.8125" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  End
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-A-6"
          transform="translate(164.61718368530273,27)"
          style="opacity: 1;"
        >
          <rect
            rx="5"
            ry="5"
            x="-43.609375"
            y="-19"
            width="87.21875"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Default
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Configuration and directives - nodes should be light blue > Settigns from intitialize - nodes should be green #0`] = `
<svg
  id="mermaid-1650652036325"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  role="img"
  aria-labelledby="chart-title-mermaid-1650652036325 chart-desc-mermaid-1650652036325"
  height="192"
  style="max-width: 297.36456298828125px;"
  viewBox="0 0 297.36456298828125 192"
>
  <title id="chart-title-mermaid-1650652036325">Flow chart</title>
  <desc id="chart-desc-mermaid-1650652036325"></desc>
  <style>
    #mermaid-1650652036325 {
      font-family: courier;
      font-size: 16px;
      fill: #000000;
    }
    #mermaid-1650652036325 .error-icon {
      fill: #552222;
    }
    #mermaid-1650652036325 .error-text {
      fill: #552222;
      stroke: #552222;
    }
    #mermaid-1650652036325 .edge-thickness-normal {
      stroke-width: 2px;
    }
    #mermaid-1650652036325 .edge-thickness-thick {
      stroke-width: 3.5px;
    }
    #mermaid-1650652036325 .edge-pattern-solid {
      stroke-dasharray: 0;
    }
    #mermaid-1650652036325 .edge-pattern-dashed {
      stroke-dasharray: 3;
    }
    #mermaid-1650652036325 .edge-pattern-dotted {
      stroke-dasharray: 2;
    }
    #mermaid-1650652036325 .marker {
      fill: #000000;
      stroke: #000000;
    }
    #mermaid-1650652036325 .marker.cross {
      stroke: #000000;
    }
    #mermaid-1650652036325 svg {
      font-family: courier;
      font-size: 16px;
    }
    #mermaid-1650652036325 .label {
      font-family: courier;
      color: #000000;
    }
    #mermaid-1650652036325 .cluster-label text {
      fill: #333;
    }
    #mermaid-1650652036325 .cluster-label span {
      color: #333;
    }
    #mermaid-1650652036325 .label text,
    #mermaid-1650652036325 span {
      fill: #000000;
      color: #000000;
    }
    #mermaid-1650652036325 .node rect,
    #mermaid-1650652036325 .node circle,
    #mermaid-1650652036325 .node ellipse,
    #mermaid-1650652036325 .node polygon,
    #mermaid-1650652036325 .node path {
      fill: #cde498;
      stroke: #13540c;
      stroke-width: 1px;
    }
    #mermaid-1650652036325 .node .label {
      text-align: center;
    }
    #mermaid-1650652036325 .node.clickable {
      cursor: pointer;
    }
    #mermaid-1650652036325 .arrowheadPath {
      fill: green;
    }
    #mermaid-1650652036325 .edgePath .path {
      stroke: #000000;
      stroke-width: 2px;
    }
    #mermaid-1650652036325 .flowchart-link {
      stroke: #000000;
      fill: none;
    }
    #mermaid-1650652036325 .edgeLabel {
      background-color: #e8e8e8;
      text-align: center;
    }
    #mermaid-1650652036325 .edgeLabel rect {
      opacity: 0.5;
      background-color: #e8e8e8;
      fill: #e8e8e8;
    }
    #mermaid-1650652036325 .cluster rect {
      fill: #cdffb2;
      stroke: #6eaa49;
      stroke-width: 1px;
    }
    #mermaid-1650652036325 .cluster text {
      fill: #333;
    }
    #mermaid-1650652036325 .cluster span {
      color: #333;
    }
    #mermaid-1650652036325 div.mermaidTooltip {
      position: absolute;
      text-align: center;
      max-width: 200px;
      padding: 2px;
      font-family: courier;
      font-size: 12px;
      background: hsl(78.1578947368, 58.4615384615%, 84.5098039216%);
      border: 1px solid #6eaa49;
      border-radius: 2px;
      pointer-events: none;
      z-index: 100;
    }
    #mermaid-1650652036325 :root {
      --mermaid-font-family: courier;
    }
  </style>
  <g>
    <g class="output">
      <g class="clusters">
        <g
          class="cluster"
          id="flowchart-section-12"
          transform="translate(148.68228912353516,140)"
          style="opacity: 1;"
        >
          <rect
            width="281.3645782470703"
            height="88"
            x="-140.68228912353516"
            y="-44"
          ></rect>
          <g
            class="label"
            transform="translate(0, -30)"
            id="mermaid-1650652036325Text"
          >
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  section
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
      <g class="edgePaths">
        <g class="edgePath LS-A LE-B" id="L-A-B" style="opacity: 1;">
          <path
            class="path"
            d="M136.40168944272128,46L130.21408105619025,50.166666666666664C124.02647266965924,54.333333333333336,111.65125589659719,62.666666666666664,105.46364751006617,71C99.27603912353516,79.33333333333333,99.27603912353516,87.66666666666667,99.35937245686848,96.08333333333333C99.44270579020183,104.5,99.60937245686848,113,99.69270579020183,117.25L99.77603912353516,121.5"
            marker-end="url(#arrowhead22)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead22"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
        <g class="edgePath LS-A LE-C" id="L-A-C" style="opacity: 1;">
          <path
            class="path"
            d="M192.8326779278842,46L199.02028631441522,50.166666666666664C205.20789470094624,54.333333333333336,217.5831114740083,62.666666666666664,223.7707198605393,71C229.9583282470703,79.33333333333333,229.9583282470703,87.66666666666667,229.9583282470703,96C229.9583282470703,104.33333333333333,229.9583282470703,112.66666666666667,229.9583282470703,116.83333333333333L229.9583282470703,121"
            marker-end="url(#arrowhead23)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead23"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-B" class="edgeLabel L-LS-A' L-LE-B"></span></div
            ></foreignObject>
          </g>
        </g>
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-C" class="edgeLabel L-LS-A' L-LE-C"></span></div
            ></foreignObject>
          </g>
        </g>
      </g>
      <g class="nodes">
        <g
          class="node default"
          id="flowchart-B-7"
          transform="translate(99.27603912353516,140)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-C-9"
          transform="translate(229.9583282470703,140)"
          style="opacity: 1;"
        >
          <rect
            rx="0"
            ry="0"
            x="-24.40625"
            y="-19"
            width="48.8125"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-14.40625,-9)">
              <foreignObject width="28.8125" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  End
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-A-6"
          transform="translate(164.61718368530273,27)"
          style="opacity: 1;"
        >
          <rect
            rx="5"
            ry="5"
            x="-38.8046875"
            y="-19"
            width="77.609375"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-28.8046875,-9)">
              <foreignObject width="57.609375" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Forest
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Configuration and directives - nodes should be light blue > Settings from initialize overriding themeVariable - nodes shold be red #0`] = `
<svg
  id="mermaid-1650652037759"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  role="img"
  aria-labelledby="chart-title-mermaid-1650652037759 chart-desc-mermaid-1650652037759"
  height="192"
  style="max-width: 297.36456298828125px;"
  viewBox="0 0 297.36456298828125 192"
>
  <title id="chart-title-mermaid-1650652037759">Flow chart</title>
  <desc id="chart-desc-mermaid-1650652037759"></desc>
  <style>
    #mermaid-1650652037759 {
      font-family: courier;
      font-size: 16px;
      fill: #333;
    }
    #mermaid-1650652037759 .error-icon {
      fill: hsl(180, 100%, 55%);
    }
    #mermaid-1650652037759 .error-text {
      fill: rgb(229.5, 0, 0);
      stroke: rgb(229.5, 0, 0);
    }
    #mermaid-1650652037759 .edge-thickness-normal {
      stroke-width: 2px;
    }
    #mermaid-1650652037759 .edge-thickness-thick {
      stroke-width: 3.5px;
    }
    #mermaid-1650652037759 .edge-pattern-solid {
      stroke-dasharray: 0;
    }
    #mermaid-1650652037759 .edge-pattern-dashed {
      stroke-dasharray: 3;
    }
    #mermaid-1650652037759 .edge-pattern-dotted {
      stroke-dasharray: 2;
    }
    #mermaid-1650652037759 .marker {
      fill: #0b0b0b;
      stroke: #0b0b0b;
    }
    #mermaid-1650652037759 .marker.cross {
      stroke: #0b0b0b;
    }
    #mermaid-1650652037759 svg {
      font-family: courier;
      font-size: 16px;
    }
    #mermaid-1650652037759 .label {
      font-family: courier;
      color: #333;
    }
    #mermaid-1650652037759 .cluster-label text {
      fill: rgb(229.5, 0, 0);
    }
    #mermaid-1650652037759 .cluster-label span {
      color: rgb(229.5, 0, 0);
    }
    #mermaid-1650652037759 .label text,
    #mermaid-1650652037759 span {
      fill: #333;
      color: #333;
    }
    #mermaid-1650652037759 .node rect,
    #mermaid-1650652037759 .node circle,
    #mermaid-1650652037759 .node ellipse,
    #mermaid-1650652037759 .node polygon,
    #mermaid-1650652037759 .node path {
      fill: #ff0000;
      stroke: hsl(0, 60%, 40%);
      stroke-width: 1px;
    }
    #mermaid-1650652037759 .node .label {
      text-align: center;
    }
    #mermaid-1650652037759 .node.clickable {
      cursor: pointer;
    }
    #mermaid-1650652037759 .arrowheadPath {
      fill: undefined;
    }
    #mermaid-1650652037759 .edgePath .path {
      stroke: #0b0b0b;
      stroke-width: 2px;
    }
    #mermaid-1650652037759 .flowchart-link {
      stroke: #0b0b0b;
      fill: none;
    }
    #mermaid-1650652037759 .edgeLabel {
      background-color: hsl(-120, 100%, 50%);
      text-align: center;
    }
    #mermaid-1650652037759 .edgeLabel rect {
      opacity: 0.5;
      background-color: hsl(-120, 100%, 50%);
      fill: hsl(-120, 100%, 50%);
    }
    #mermaid-1650652037759 .cluster rect {
      fill: hsl(180, 100%, 55%);
      stroke: hsl(180, 60%, 45%);
      stroke-width: 1px;
    }
    #mermaid-1650652037759 .cluster text {
      fill: rgb(229.5, 0, 0);
    }
    #mermaid-1650652037759 .cluster span {
      color: rgb(229.5, 0, 0);
    }
    #mermaid-1650652037759 div.mermaidTooltip {
      position: absolute;
      text-align: center;
      max-width: 200px;
      padding: 2px;
      font-family: courier;
      font-size: 12px;
      background: hsl(180, 100%, 55%);
      border: 1px solid undefined;
      border-radius: 2px;
      pointer-events: none;
      z-index: 100;
    }
    #mermaid-1650652037759 :root {
      --mermaid-font-family: courier;
    }
  </style>
  <g>
    <g class="output">
      <g class="clusters">
        <g
          class="cluster"
          id="flowchart-section-12"
          transform="translate(148.68228912353516,140)"
          style="opacity: 1;"
        >
          <rect
            width="281.3645782470703"
            height="88"
            x="-140.68228912353516"
            y="-44"
          ></rect>
          <g
            class="label"
            transform="translate(0, -30)"
            id="mermaid-1650652037759Text"
          >
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  section
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
      <g class="edgePaths">
        <g class="edgePath LS-A LE-B" id="L-A-B" style="opacity: 1;">
          <path
            class="path"
            d="M136.9016894427213,46.50000000000001L130.63074772285697,50.583333333333336C124.35980600299258,54.666666666666664,111.81792256326388,62.833333333333336,105.54698084339952,71.08333333333333C99.27603912353516,79.33333333333333,99.27603912353516,87.66666666666667,99.35937245686848,96.08333333333333C99.44270579020183,104.5,99.60937245686848,113,99.69270579020183,117.25L99.77603912353516,121.5"
            marker-end="url(#arrowhead22)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead22"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
        <g class="edgePath LS-A LE-C" id="L-A-C" style="opacity: 1;">
          <path
            class="path"
            d="M193.33267792788422,46.50000000000001L199.43695298108187,50.583333333333336C205.54122803427958,54.666666666666664,217.74977814067495,62.833333333333336,223.8540531938726,71.08333333333333C229.9583282470703,79.33333333333333,229.9583282470703,87.66666666666667,229.9583282470703,96C229.9583282470703,104.33333333333333,229.9583282470703,112.66666666666667,229.9583282470703,116.83333333333333L229.9583282470703,121"
            marker-end="url(#arrowhead23)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead23"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-B" class="edgeLabel L-LS-A' L-LE-B"></span></div
            ></foreignObject>
          </g>
        </g>
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-C" class="edgeLabel L-LS-A' L-LE-C"></span></div
            ></foreignObject>
          </g>
        </g>
      </g>
      <g class="nodes">
        <g
          class="node default"
          id="flowchart-B-7"
          transform="translate(99.27603912353516,140)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-C-9"
          transform="translate(229.9583282470703,140)"
          style="opacity: 1;"
        >
          <rect
            rx="0"
            ry="0"
            x="-24.40625"
            y="-19"
            width="48.8125"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-14.40625,-9)">
              <foreignObject width="28.8125" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  End
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-A-6"
          transform="translate(164.61718368530273,27)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Configuration and directives - nodes should be light blue > Settings from directive - nodes should be grey #0`] = `
<svg
  id="mermaid-1650652039207"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  role="img"
  aria-labelledby="chart-title-mermaid-1650652039207 chart-desc-mermaid-1650652039207"
  height="192"
  style="max-width: 297.36456298828125px;"
  viewBox="0 0 297.36456298828125 192"
>
  <title id="chart-title-mermaid-1650652039207">Flow chart</title>
  <desc id="chart-desc-mermaid-1650652039207"></desc>
  <style>
    #mermaid-1650652039207 {
      font-family: courier;
      font-size: 16px;
      fill: #000000;
    }
    #mermaid-1650652039207 .error-icon {
      fill: #552222;
    }
    #mermaid-1650652039207 .error-text {
      fill: #552222;
      stroke: #552222;
    }
    #mermaid-1650652039207 .edge-thickness-normal {
      stroke-width: 2px;
    }
    #mermaid-1650652039207 .edge-thickness-thick {
      stroke-width: 3.5px;
    }
    #mermaid-1650652039207 .edge-pattern-solid {
      stroke-dasharray: 0;
    }
    #mermaid-1650652039207 .edge-pattern-dashed {
      stroke-dasharray: 3;
    }
    #mermaid-1650652039207 .edge-pattern-dotted {
      stroke-dasharray: 2;
    }
    #mermaid-1650652039207 .marker {
      fill: #666;
      stroke: #666;
    }
    #mermaid-1650652039207 .marker.cross {
      stroke: #666;
    }
    #mermaid-1650652039207 svg {
      font-family: courier;
      font-size: 16px;
    }
    #mermaid-1650652039207 .label {
      font-family: courier;
      color: #000000;
    }
    #mermaid-1650652039207 .cluster-label text {
      fill: #333;
    }
    #mermaid-1650652039207 .cluster-label span {
      color: #333;
    }
    #mermaid-1650652039207 .label text,
    #mermaid-1650652039207 span {
      fill: #000000;
      color: #000000;
    }
    #mermaid-1650652039207 .node rect,
    #mermaid-1650652039207 .node circle,
    #mermaid-1650652039207 .node ellipse,
    #mermaid-1650652039207 .node polygon,
    #mermaid-1650652039207 .node path {
      fill: #eee;
      stroke: #999;
      stroke-width: 1px;
    }
    #mermaid-1650652039207 .node .label {
      text-align: center;
    }
    #mermaid-1650652039207 .node.clickable {
      cursor: pointer;
    }
    #mermaid-1650652039207 .arrowheadPath {
      fill: #333333;
    }
    #mermaid-1650652039207 .edgePath .path {
      stroke: #666;
      stroke-width: 2px;
    }
    #mermaid-1650652039207 .flowchart-link {
      stroke: #666;
      fill: none;
    }
    #mermaid-1650652039207 .edgeLabel {
      background-color: white;
      text-align: center;
    }
    #mermaid-1650652039207 .edgeLabel rect {
      opacity: 0.5;
      background-color: white;
      fill: white;
    }
    #mermaid-1650652039207 .cluster rect {
      fill: hsl(0, 0%, 98.9215686275%);
      stroke: #707070;
      stroke-width: 1px;
    }
    #mermaid-1650652039207 .cluster text {
      fill: #333;
    }
    #mermaid-1650652039207 .cluster span {
      color: #333;
    }
    #mermaid-1650652039207 div.mermaidTooltip {
      position: absolute;
      text-align: center;
      max-width: 200px;
      padding: 2px;
      font-family: courier;
      font-size: 12px;
      background: hsl(-160, 0%, 93.3333333333%);
      border: 1px solid #707070;
      border-radius: 2px;
      pointer-events: none;
      z-index: 100;
    }
    #mermaid-1650652039207 :root {
      --mermaid-font-family: courier;
    }
  </style>
  <g>
    <g class="output">
      <g class="clusters">
        <g
          class="cluster"
          id="flowchart-section-12"
          transform="translate(148.68228912353516,140)"
          style="opacity: 1;"
        >
          <rect
            width="281.3645782470703"
            height="88"
            x="-140.68228912353516"
            y="-44"
          ></rect>
          <g
            class="label"
            transform="translate(0, -30)"
            id="mermaid-1650652039207Text"
          >
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  section
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
      <g class="edgePaths">
        <g class="edgePath LS-A LE-B" id="L-A-B" style="opacity: 1;">
          <path
            class="path"
            d="M136.9016894427213,46.50000000000001L130.63074772285697,50.583333333333336C124.35980600299258,54.666666666666664,111.81792256326388,62.833333333333336,105.54698084339952,71.08333333333333C99.27603912353516,79.33333333333333,99.27603912353516,87.66666666666667,99.35937245686848,96.08333333333333C99.44270579020183,104.5,99.60937245686848,113,99.69270579020183,117.25L99.77603912353516,121.5"
            marker-end="url(#arrowhead22)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead22"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
        <g class="edgePath LS-A LE-C" id="L-A-C" style="opacity: 1;">
          <path
            class="path"
            d="M193.33267792788422,46.50000000000001L199.43695298108187,50.583333333333336C205.54122803427958,54.666666666666664,217.74977814067495,62.833333333333336,223.8540531938726,71.08333333333333C229.9583282470703,79.33333333333333,229.9583282470703,87.66666666666667,229.9583282470703,96C229.9583282470703,104.33333333333333,229.9583282470703,112.66666666666667,229.9583282470703,116.83333333333333L229.9583282470703,121"
            marker-end="url(#arrowhead23)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead23"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-B" class="edgeLabel L-LS-A' L-LE-B"></span></div
            ></foreignObject>
          </g>
        </g>
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-C" class="edgeLabel L-LS-A' L-LE-C"></span></div
            ></foreignObject>
          </g>
        </g>
      </g>
      <g class="nodes">
        <g
          class="node default"
          id="flowchart-B-7"
          transform="translate(99.27603912353516,140)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-C-9"
          transform="translate(229.9583282470703,140)"
          style="opacity: 1;"
        >
          <rect
            rx="0"
            ry="0"
            x="-24.40625"
            y="-19"
            width="48.8125"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-14.40625,-9)">
              <foreignObject width="28.8125" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  End
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-A-6"
          transform="translate(164.61718368530273,27)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Configuration and directives - nodes should be light blue > Settings from directive overriding theme variable - nodes should be red #0`] = `
<svg
  id="mermaid-1650652040667"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  role="img"
  aria-labelledby="chart-title-mermaid-1650652040667 chart-desc-mermaid-1650652040667"
  height="192"
  style="max-width: 297.36456298828125px;"
  viewBox="0 0 297.36456298828125 192"
>
  <title id="chart-title-mermaid-1650652040667">Flow chart</title>
  <desc id="chart-desc-mermaid-1650652040667"></desc>
  <style>
    #mermaid-1650652040667 {
      font-family: courier;
      font-size: 16px;
      fill: #333;
    }
    #mermaid-1650652040667 .error-icon {
      fill: hsl(180, 100%, 55%);
    }
    #mermaid-1650652040667 .error-text {
      fill: rgb(229.5, 0, 0);
      stroke: rgb(229.5, 0, 0);
    }
    #mermaid-1650652040667 .edge-thickness-normal {
      stroke-width: 2px;
    }
    #mermaid-1650652040667 .edge-thickness-thick {
      stroke-width: 3.5px;
    }
    #mermaid-1650652040667 .edge-pattern-solid {
      stroke-dasharray: 0;
    }
    #mermaid-1650652040667 .edge-pattern-dashed {
      stroke-dasharray: 3;
    }
    #mermaid-1650652040667 .edge-pattern-dotted {
      stroke-dasharray: 2;
    }
    #mermaid-1650652040667 .marker {
      fill: #0b0b0b;
      stroke: #0b0b0b;
    }
    #mermaid-1650652040667 .marker.cross {
      stroke: #0b0b0b;
    }
    #mermaid-1650652040667 svg {
      font-family: courier;
      font-size: 16px;
    }
    #mermaid-1650652040667 .label {
      font-family: courier;
      color: #333;
    }
    #mermaid-1650652040667 .cluster-label text {
      fill: rgb(229.5, 0, 0);
    }
    #mermaid-1650652040667 .cluster-label span {
      color: rgb(229.5, 0, 0);
    }
    #mermaid-1650652040667 .label text,
    #mermaid-1650652040667 span {
      fill: #333;
      color: #333;
    }
    #mermaid-1650652040667 .node rect,
    #mermaid-1650652040667 .node circle,
    #mermaid-1650652040667 .node ellipse,
    #mermaid-1650652040667 .node polygon,
    #mermaid-1650652040667 .node path {
      fill: #ff0000;
      stroke: hsl(0, 60%, 40%);
      stroke-width: 1px;
    }
    #mermaid-1650652040667 .node .label {
      text-align: center;
    }
    #mermaid-1650652040667 .node.clickable {
      cursor: pointer;
    }
    #mermaid-1650652040667 .arrowheadPath {
      fill: undefined;
    }
    #mermaid-1650652040667 .edgePath .path {
      stroke: #0b0b0b;
      stroke-width: 2px;
    }
    #mermaid-1650652040667 .flowchart-link {
      stroke: #0b0b0b;
      fill: none;
    }
    #mermaid-1650652040667 .edgeLabel {
      background-color: hsl(-120, 100%, 50%);
      text-align: center;
    }
    #mermaid-1650652040667 .edgeLabel rect {
      opacity: 0.5;
      background-color: hsl(-120, 100%, 50%);
      fill: hsl(-120, 100%, 50%);
    }
    #mermaid-1650652040667 .cluster rect {
      fill: hsl(180, 100%, 55%);
      stroke: hsl(180, 60%, 45%);
      stroke-width: 1px;
    }
    #mermaid-1650652040667 .cluster text {
      fill: rgb(229.5, 0, 0);
    }
    #mermaid-1650652040667 .cluster span {
      color: rgb(229.5, 0, 0);
    }
    #mermaid-1650652040667 div.mermaidTooltip {
      position: absolute;
      text-align: center;
      max-width: 200px;
      padding: 2px;
      font-family: courier;
      font-size: 12px;
      background: hsl(180, 100%, 55%);
      border: 1px solid undefined;
      border-radius: 2px;
      pointer-events: none;
      z-index: 100;
    }
    #mermaid-1650652040667 :root {
      --mermaid-font-family: courier;
    }
  </style>
  <g>
    <g class="output">
      <g class="clusters">
        <g
          class="cluster"
          id="flowchart-section-12"
          transform="translate(148.68228912353516,140)"
          style="opacity: 1;"
        >
          <rect
            width="281.3645782470703"
            height="88"
            x="-140.68228912353516"
            y="-44"
          ></rect>
          <g
            class="label"
            transform="translate(0, -30)"
            id="mermaid-1650652040667Text"
          >
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  section
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
      <g class="edgePaths">
        <g class="edgePath LS-A LE-B" id="L-A-B" style="opacity: 1;">
          <path
            class="path"
            d="M136.9016894427213,46.50000000000001L130.63074772285697,50.583333333333336C124.35980600299258,54.666666666666664,111.81792256326388,62.833333333333336,105.54698084339952,71.08333333333333C99.27603912353516,79.33333333333333,99.27603912353516,87.66666666666667,99.35937245686848,96.08333333333333C99.44270579020183,104.5,99.60937245686848,113,99.69270579020183,117.25L99.77603912353516,121.5"
            marker-end="url(#arrowhead22)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead22"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
        <g class="edgePath LS-A LE-C" id="L-A-C" style="opacity: 1;">
          <path
            class="path"
            d="M193.33267792788422,46.50000000000001L199.43695298108187,50.583333333333336C205.54122803427958,54.666666666666664,217.74977814067495,62.833333333333336,223.8540531938726,71.08333333333333C229.9583282470703,79.33333333333333,229.9583282470703,87.66666666666667,229.9583282470703,96C229.9583282470703,104.33333333333333,229.9583282470703,112.66666666666667,229.9583282470703,116.83333333333333L229.9583282470703,121"
            marker-end="url(#arrowhead23)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead23"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-B" class="edgeLabel L-LS-A' L-LE-B"></span></div
            ></foreignObject>
          </g>
        </g>
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-C" class="edgeLabel L-LS-A' L-LE-C"></span></div
            ></foreignObject>
          </g>
        </g>
      </g>
      <g class="nodes">
        <g
          class="node default"
          id="flowchart-B-7"
          transform="translate(99.27603912353516,140)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-C-9"
          transform="translate(229.9583282470703,140)"
          style="opacity: 1;"
        >
          <rect
            rx="0"
            ry="0"
            x="-24.40625"
            y="-19"
            width="48.8125"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-14.40625,-9)">
              <foreignObject width="28.8125" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  End
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-A-6"
          transform="translate(164.61718368530273,27)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Configuration and directives - nodes should be light blue > Settings from initialize and directive - nodes should be grey #0`] = `
<svg
  id="mermaid-1650652042105"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  role="img"
  aria-labelledby="chart-title-mermaid-1650652042105 chart-desc-mermaid-1650652042105"
  height="192"
  style="max-width: 297.36456298828125px;"
  viewBox="0 0 297.36456298828125 192"
>
  <title id="chart-title-mermaid-1650652042105">Flow chart</title>
  <desc id="chart-desc-mermaid-1650652042105"></desc>
  <style>
    #mermaid-1650652042105 {
      font-family: courier;
      font-size: 16px;
      fill: #000000;
    }
    #mermaid-1650652042105 .error-icon {
      fill: #552222;
    }
    #mermaid-1650652042105 .error-text {
      fill: #552222;
      stroke: #552222;
    }
    #mermaid-1650652042105 .edge-thickness-normal {
      stroke-width: 2px;
    }
    #mermaid-1650652042105 .edge-thickness-thick {
      stroke-width: 3.5px;
    }
    #mermaid-1650652042105 .edge-pattern-solid {
      stroke-dasharray: 0;
    }
    #mermaid-1650652042105 .edge-pattern-dashed {
      stroke-dasharray: 3;
    }
    #mermaid-1650652042105 .edge-pattern-dotted {
      stroke-dasharray: 2;
    }
    #mermaid-1650652042105 .marker {
      fill: #666;
      stroke: #666;
    }
    #mermaid-1650652042105 .marker.cross {
      stroke: #666;
    }
    #mermaid-1650652042105 svg {
      font-family: courier;
      font-size: 16px;
    }
    #mermaid-1650652042105 .label {
      font-family: courier;
      color: #000000;
    }
    #mermaid-1650652042105 .cluster-label text {
      fill: #333;
    }
    #mermaid-1650652042105 .cluster-label span {
      color: #333;
    }
    #mermaid-1650652042105 .label text,
    #mermaid-1650652042105 span {
      fill: #000000;
      color: #000000;
    }
    #mermaid-1650652042105 .node rect,
    #mermaid-1650652042105 .node circle,
    #mermaid-1650652042105 .node ellipse,
    #mermaid-1650652042105 .node polygon,
    #mermaid-1650652042105 .node path {
      fill: #eee;
      stroke: #999;
      stroke-width: 1px;
    }
    #mermaid-1650652042105 .node .label {
      text-align: center;
    }
    #mermaid-1650652042105 .node.clickable {
      cursor: pointer;
    }
    #mermaid-1650652042105 .arrowheadPath {
      fill: #333333;
    }
    #mermaid-1650652042105 .edgePath .path {
      stroke: #666;
      stroke-width: 2px;
    }
    #mermaid-1650652042105 .flowchart-link {
      stroke: #666;
      fill: none;
    }
    #mermaid-1650652042105 .edgeLabel {
      background-color: white;
      text-align: center;
    }
    #mermaid-1650652042105 .edgeLabel rect {
      opacity: 0.5;
      background-color: white;
      fill: white;
    }
    #mermaid-1650652042105 .cluster rect {
      fill: hsl(0, 0%, 98.9215686275%);
      stroke: #707070;
      stroke-width: 1px;
    }
    #mermaid-1650652042105 .cluster text {
      fill: #333;
    }
    #mermaid-1650652042105 .cluster span {
      color: #333;
    }
    #mermaid-1650652042105 div.mermaidTooltip {
      position: absolute;
      text-align: center;
      max-width: 200px;
      padding: 2px;
      font-family: courier;
      font-size: 12px;
      background: hsl(-160, 0%, 93.3333333333%);
      border: 1px solid #707070;
      border-radius: 2px;
      pointer-events: none;
      z-index: 100;
    }
    #mermaid-1650652042105 :root {
      --mermaid-font-family: courier;
    }
  </style>
  <g>
    <g class="output">
      <g class="clusters">
        <g
          class="cluster"
          id="flowchart-section-12"
          transform="translate(148.68228912353516,140)"
          style="opacity: 1;"
        >
          <rect
            width="281.3645782470703"
            height="88"
            x="-140.68228912353516"
            y="-44"
          ></rect>
          <g
            class="label"
            transform="translate(0, -30)"
            id="mermaid-1650652042105Text"
          >
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  section
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
      <g class="edgePaths">
        <g class="edgePath LS-A LE-B" id="L-A-B" style="opacity: 1;">
          <path
            class="path"
            d="M136.9016894427213,46.50000000000001L130.63074772285697,50.583333333333336C124.35980600299258,54.666666666666664,111.81792256326388,62.833333333333336,105.54698084339952,71.08333333333333C99.27603912353516,79.33333333333333,99.27603912353516,87.66666666666667,99.35937245686848,96.08333333333333C99.44270579020183,104.5,99.60937245686848,113,99.69270579020183,117.25L99.77603912353516,121.5"
            marker-end="url(#arrowhead22)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead22"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
        <g class="edgePath LS-A LE-C" id="L-A-C" style="opacity: 1;">
          <path
            class="path"
            d="M193.33267792788422,46.50000000000001L199.43695298108187,50.583333333333336C205.54122803427958,54.666666666666664,217.74977814067495,62.833333333333336,223.8540531938726,71.08333333333333C229.9583282470703,79.33333333333333,229.9583282470703,87.66666666666667,229.9583282470703,96C229.9583282470703,104.33333333333333,229.9583282470703,112.66666666666667,229.9583282470703,116.83333333333333L229.9583282470703,121"
            marker-end="url(#arrowhead23)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead23"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-B" class="edgeLabel L-LS-A' L-LE-B"></span></div
            ></foreignObject>
          </g>
        </g>
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-C" class="edgeLabel L-LS-A' L-LE-C"></span></div
            ></foreignObject>
          </g>
        </g>
      </g>
      <g class="nodes">
        <g
          class="node default"
          id="flowchart-B-7"
          transform="translate(99.27603912353516,140)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-C-9"
          transform="translate(229.9583282470703,140)"
          style="opacity: 1;"
        >
          <rect
            rx="0"
            ry="0"
            x="-24.40625"
            y="-19"
            width="48.8125"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-14.40625,-9)">
              <foreignObject width="28.8125" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  End
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-A-6"
          transform="translate(164.61718368530273,27)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Configuration and directives - nodes should be light blue > Theme from initialize, directive overriding theme variable - nodes should be red #0`] = `
<svg
  id="mermaid-1650652043547"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  role="img"
  aria-labelledby="chart-title-mermaid-1650652043547 chart-desc-mermaid-1650652043547"
  height="192"
  style="max-width: 297.36456298828125px;"
  viewBox="0 0 297.36456298828125 192"
>
  <title id="chart-title-mermaid-1650652043547">Flow chart</title>
  <desc id="chart-desc-mermaid-1650652043547"></desc>
  <style>
    #mermaid-1650652043547 {
      font-family: courier;
      font-size: 16px;
      fill: #333;
    }
    #mermaid-1650652043547 .error-icon {
      fill: hsl(180, 100%, 55%);
    }
    #mermaid-1650652043547 .error-text {
      fill: rgb(229.5, 0, 0);
      stroke: rgb(229.5, 0, 0);
    }
    #mermaid-1650652043547 .edge-thickness-normal {
      stroke-width: 2px;
    }
    #mermaid-1650652043547 .edge-thickness-thick {
      stroke-width: 3.5px;
    }
    #mermaid-1650652043547 .edge-pattern-solid {
      stroke-dasharray: 0;
    }
    #mermaid-1650652043547 .edge-pattern-dashed {
      stroke-dasharray: 3;
    }
    #mermaid-1650652043547 .edge-pattern-dotted {
      stroke-dasharray: 2;
    }
    #mermaid-1650652043547 .marker {
      fill: #0b0b0b;
      stroke: #0b0b0b;
    }
    #mermaid-1650652043547 .marker.cross {
      stroke: #0b0b0b;
    }
    #mermaid-1650652043547 svg {
      font-family: courier;
      font-size: 16px;
    }
    #mermaid-1650652043547 .label {
      font-family: courier;
      color: #333;
    }
    #mermaid-1650652043547 .cluster-label text {
      fill: rgb(229.5, 0, 0);
    }
    #mermaid-1650652043547 .cluster-label span {
      color: rgb(229.5, 0, 0);
    }
    #mermaid-1650652043547 .label text,
    #mermaid-1650652043547 span {
      fill: #333;
      color: #333;
    }
    #mermaid-1650652043547 .node rect,
    #mermaid-1650652043547 .node circle,
    #mermaid-1650652043547 .node ellipse,
    #mermaid-1650652043547 .node polygon,
    #mermaid-1650652043547 .node path {
      fill: #ff0000;
      stroke: hsl(0, 60%, 40%);
      stroke-width: 1px;
    }
    #mermaid-1650652043547 .node .label {
      text-align: center;
    }
    #mermaid-1650652043547 .node.clickable {
      cursor: pointer;
    }
    #mermaid-1650652043547 .arrowheadPath {
      fill: undefined;
    }
    #mermaid-1650652043547 .edgePath .path {
      stroke: #0b0b0b;
      stroke-width: 2px;
    }
    #mermaid-1650652043547 .flowchart-link {
      stroke: #0b0b0b;
      fill: none;
    }
    #mermaid-1650652043547 .edgeLabel {
      background-color: hsl(-120, 100%, 50%);
      text-align: center;
    }
    #mermaid-1650652043547 .edgeLabel rect {
      opacity: 0.5;
      background-color: hsl(-120, 100%, 50%);
      fill: hsl(-120, 100%, 50%);
    }
    #mermaid-1650652043547 .cluster rect {
      fill: hsl(180, 100%, 55%);
      stroke: hsl(180, 60%, 45%);
      stroke-width: 1px;
    }
    #mermaid-1650652043547 .cluster text {
      fill: rgb(229.5, 0, 0);
    }
    #mermaid-1650652043547 .cluster span {
      color: rgb(229.5, 0, 0);
    }
    #mermaid-1650652043547 div.mermaidTooltip {
      position: absolute;
      text-align: center;
      max-width: 200px;
      padding: 2px;
      font-family: courier;
      font-size: 12px;
      background: hsl(180, 100%, 55%);
      border: 1px solid undefined;
      border-radius: 2px;
      pointer-events: none;
      z-index: 100;
    }
    #mermaid-1650652043547 :root {
      --mermaid-font-family: courier;
    }
  </style>
  <g>
    <g class="output">
      <g class="clusters">
        <g
          class="cluster"
          id="flowchart-section-12"
          transform="translate(148.68228912353516,140)"
          style="opacity: 1;"
        >
          <rect
            width="281.3645782470703"
            height="88"
            x="-140.68228912353516"
            y="-44"
          ></rect>
          <g
            class="label"
            transform="translate(0, -30)"
            id="mermaid-1650652043547Text"
          >
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  section
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
      <g class="edgePaths">
        <g class="edgePath LS-A LE-B" id="L-A-B" style="opacity: 1;">
          <path
            class="path"
            d="M136.9016894427213,46.50000000000001L130.63074772285697,50.583333333333336C124.35980600299258,54.666666666666664,111.81792256326388,62.833333333333336,105.54698084339952,71.08333333333333C99.27603912353516,79.33333333333333,99.27603912353516,87.66666666666667,99.35937245686848,96.08333333333333C99.44270579020183,104.5,99.60937245686848,113,99.69270579020183,117.25L99.77603912353516,121.5"
            marker-end="url(#arrowhead22)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead22"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
        <g class="edgePath LS-A LE-C" id="L-A-C" style="opacity: 1;">
          <path
            class="path"
            d="M193.33267792788422,46.50000000000001L199.43695298108187,50.583333333333336C205.54122803427958,54.666666666666664,217.74977814067495,62.833333333333336,223.8540531938726,71.08333333333333C229.9583282470703,79.33333333333333,229.9583282470703,87.66666666666667,229.9583282470703,96C229.9583282470703,104.33333333333333,229.9583282470703,112.66666666666667,229.9583282470703,116.83333333333333L229.9583282470703,121"
            marker-end="url(#arrowhead23)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead23"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-B" class="edgeLabel L-LS-A' L-LE-B"></span></div
            ></foreignObject>
          </g>
        </g>
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-C" class="edgeLabel L-LS-A' L-LE-C"></span></div
            ></foreignObject>
          </g>
        </g>
      </g>
      <g class="nodes">
        <g
          class="node default"
          id="flowchart-B-7"
          transform="translate(99.27603912353516,140)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-C-9"
          transform="translate(229.9583282470703,140)"
          style="opacity: 1;"
        >
          <rect
            rx="0"
            ry="0"
            x="-24.40625"
            y="-19"
            width="48.8125"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-14.40625,-9)">
              <foreignObject width="28.8125" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  End
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-A-6"
          transform="translate(164.61718368530273,27)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Configuration and directives - nodes should be light blue > Theme variable from initialize, theme from directive - nodes should be red #0`] = `
<svg
  id="mermaid-1650652044984"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  role="img"
  aria-labelledby="chart-title-mermaid-1650652044984 chart-desc-mermaid-1650652044984"
  height="192"
  style="max-width: 297.36456298828125px;"
  viewBox="0 0 297.36456298828125 192"
>
  <title id="chart-title-mermaid-1650652044984">Flow chart</title>
  <desc id="chart-desc-mermaid-1650652044984"></desc>
  <style>
    #mermaid-1650652044984 {
      font-family: courier;
      font-size: 16px;
      fill: #333;
    }
    #mermaid-1650652044984 .error-icon {
      fill: hsl(220.5882352941, 100%, 98.3333333333%);
    }
    #mermaid-1650652044984 .error-text {
      fill: rgb(8.5000000002, 5.7500000001, 0);
      stroke: rgb(8.5000000002, 5.7500000001, 0);
    }
    #mermaid-1650652044984 .edge-thickness-normal {
      stroke-width: 2px;
    }
    #mermaid-1650652044984 .edge-thickness-thick {
      stroke-width: 3.5px;
    }
    #mermaid-1650652044984 .edge-pattern-solid {
      stroke-dasharray: 0;
    }
    #mermaid-1650652044984 .edge-pattern-dashed {
      stroke-dasharray: 3;
    }
    #mermaid-1650652044984 .edge-pattern-dotted {
      stroke-dasharray: 2;
    }
    #mermaid-1650652044984 .marker {
      fill: #0b0b0b;
      stroke: #0b0b0b;
    }
    #mermaid-1650652044984 .marker.cross {
      stroke: #0b0b0b;
    }
    #mermaid-1650652044984 svg {
      font-family: courier;
      font-size: 16px;
    }
    #mermaid-1650652044984 .label {
      font-family: courier;
      color: #333;
    }
    #mermaid-1650652044984 .cluster-label text {
      fill: rgb(8.5000000002, 5.7500000001, 0);
    }
    #mermaid-1650652044984 .cluster-label span {
      color: rgb(8.5000000002, 5.7500000001, 0);
    }
    #mermaid-1650652044984 .label text,
    #mermaid-1650652044984 span {
      fill: #333;
      color: #333;
    }
    #mermaid-1650652044984 .node rect,
    #mermaid-1650652044984 .node circle,
    #mermaid-1650652044984 .node ellipse,
    #mermaid-1650652044984 .node polygon,
    #mermaid-1650652044984 .node path {
      fill: #fff4dd;
      stroke: hsl(40.5882352941, 60%, 83.3333333333%);
      stroke-width: 1px;
    }
    #mermaid-1650652044984 .node .label {
      text-align: center;
    }
    #mermaid-1650652044984 .node.clickable {
      cursor: pointer;
    }
    #mermaid-1650652044984 .arrowheadPath {
      fill: undefined;
    }
    #mermaid-1650652044984 .edgePath .path {
      stroke: #0b0b0b;
      stroke-width: 2px;
    }
    #mermaid-1650652044984 .flowchart-link {
      stroke: #0b0b0b;
      fill: none;
    }
    #mermaid-1650652044984 .edgeLabel {
      background-color: hsl(-79.4117647059, 100%, 93.3333333333%);
      text-align: center;
    }
    #mermaid-1650652044984 .edgeLabel rect {
      opacity: 0.5;
      background-color: hsl(-79.4117647059, 100%, 93.3333333333%);
      fill: hsl(-79.4117647059, 100%, 93.3333333333%);
    }
    #mermaid-1650652044984 .cluster rect {
      fill: hsl(220.5882352941, 100%, 98.3333333333%);
      stroke: hsl(220.5882352941, 60%, 88.3333333333%);
      stroke-width: 1px;
    }
    #mermaid-1650652044984 .cluster text {
      fill: rgb(8.5000000002, 5.7500000001, 0);
    }
    #mermaid-1650652044984 .cluster span {
      color: rgb(8.5000000002, 5.7500000001, 0);
    }
    #mermaid-1650652044984 div.mermaidTooltip {
      position: absolute;
      text-align: center;
      max-width: 200px;
      padding: 2px;
      font-family: courier;
      font-size: 12px;
      background: hsl(220.5882352941, 100%, 98.3333333333%);
      border: 1px solid undefined;
      border-radius: 2px;
      pointer-events: none;
      z-index: 100;
    }
    #mermaid-1650652044984 :root {
      --mermaid-font-family: courier;
    }
  </style>
  <g>
    <g class="output">
      <g class="clusters">
        <g
          class="cluster"
          id="flowchart-section-12"
          transform="translate(148.68228912353516,140)"
          style="opacity: 1;"
        >
          <rect
            width="281.3645782470703"
            height="88"
            x="-140.68228912353516"
            y="-44"
          ></rect>
          <g
            class="label"
            transform="translate(0, -30)"
            id="mermaid-1650652044984Text"
          >
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  section
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
      <g class="edgePaths">
        <g class="edgePath LS-A LE-B" id="L-A-B" style="opacity: 1;">
          <path
            class="path"
            d="M136.9016894427213,46.50000000000001L130.63074772285697,50.583333333333336C124.35980600299258,54.666666666666664,111.81792256326388,62.833333333333336,105.54698084339952,71.08333333333333C99.27603912353516,79.33333333333333,99.27603912353516,87.66666666666667,99.35937245686848,96.08333333333333C99.44270579020183,104.5,99.60937245686848,113,99.69270579020183,117.25L99.77603912353516,121.5"
            marker-end="url(#arrowhead22)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead22"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
        <g class="edgePath LS-A LE-C" id="L-A-C" style="opacity: 1;">
          <path
            class="path"
            d="M193.33267792788422,46.50000000000001L199.43695298108187,50.583333333333336C205.54122803427958,54.666666666666664,217.74977814067495,62.833333333333336,223.8540531938726,71.08333333333333C229.9583282470703,79.33333333333333,229.9583282470703,87.66666666666667,229.9583282470703,96C229.9583282470703,104.33333333333333,229.9583282470703,112.66666666666667,229.9583282470703,116.83333333333333L229.9583282470703,121"
            marker-end="url(#arrowhead23)"
            style="fill:none"
          ></path>
          <defs>
            <marker
              id="arrowhead23"
              viewBox="0 0 10 10"
              refX="9"
              refY="5"
              markerUnits="strokeWidth"
              markerWidth="8"
              markerHeight="6"
              orient="auto"
            >
              <path
                d="M 0 0 L 10 5 L 0 10 z"
                class="arrowheadPath"
                style="stroke-width: 1; stroke-dasharray: 1, 0;"
              ></path>
            </marker>
          </defs>
        </g>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-B" class="edgeLabel L-LS-A' L-LE-B"></span></div
            ></foreignObject>
          </g>
        </g>
        <g class="edgeLabel" transform="" style="opacity: 1;">
          <g transform="translate(0,0)" class="label">
            <rect rx="0" ry="0" width="0" height="0"></rect>
            <foreignObject width="0" height="0"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: inline-block; white-space: nowrap;"
              >
                <span id="L-L-A-C" class="edgeLabel L-LS-A' L-LE-C"></span></div
            ></foreignObject>
          </g>
        </g>
      </g>
      <g class="nodes">
        <g
          class="node default"
          id="flowchart-B-7"
          transform="translate(99.27603912353516,140)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-C-9"
          transform="translate(229.9583282470703,140)"
          style="opacity: 1;"
        >
          <rect
            rx="0"
            ry="0"
            x="-24.40625"
            y="-19"
            width="48.8125"
            height="38"
            class="label-container"
          ></rect>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-14.40625,-9)">
              <foreignObject width="28.8125" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  End
                </div></foreignObject
              >
            </g>
          </g>
        </g>
        <g
          class="node default"
          id="flowchart-A-6"
          transform="translate(164.61718368530273,27)"
          style="opacity: 1;"
        >
          <polygon
            points="-12.666666666666666,0 80.88541666666667,0 99.88541666666667,-38 6.333333333333333,-38"
            transform="translate(-43.609375,19)"
            class="label-container"
          ></polygon>
          <g class="label" transform="translate(0,0)">
            <g transform="translate(-33.609375,-9)">
              <foreignObject width="67.21875" height="18"
                ><div
                  xmlns="http://www.w3.org/1999/xhtml"
                  style="display: inline-block; white-space: nowrap;"
                >
                  Another
                </div></foreignObject
              >
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Configuration and directives - nodes should be light blue > when rendering several diagrams > diagrams should not taint later diagrams #0`] = `
[ {}, {}, {}, {}, {}, {} ]
`;
